IMAPx: Messages unexpectedly deleted from Inbox
I found several old messages from my IMAP inbox sitting in my Trash folder, and was able to capture Evolution deleting messages from INBOX unexpectedly, annotated here for clarity:
[imapx:A] I/O: 'A05564 UID MOVE 17251 Trash'
^ Delete recent message from folder A
[imapx:A] I/O: 'A05658 UID MOVE 17252:17253 Trash'
^ Delete recent messages from folder A
[imapx:A] I/O: 'A05670 UID MOVE 17254 Trash'
^ Delete recent message from folder A
[imapx:A] I/O: 'A05697 UID MOVE 9358 Trash'
^ Delete recent message from folder B
[imapx:A] I/O: 'A05715 UID MOVE 29605:29606 Trash'
^ Delete recent messages from folder C
[imapx:A] I/O: 'A05816 UID MOVE 616793 Trash'
^ Delete recent message from INBOX
[imapx:A] I/O: 'A05835 UID MOVE 29607 Trash'
^ Delete recent message from folder C
[imapx:A] I/O: 'A06578 UID MOVE 17255 Trash'
^ Delete recent message from folder A
[imapx:A] I/O: 'A06603 UID MOVE 29608:29609 Trash'
^ Delete recent messages from folder C
[imapx:A] I/O: 'A06974 UID MOVE 9359 Trash'
^ Delete recent message from folder B
[imapx:A] I/O: 'A07180 UID MOVE 558945 Trash'
^ Uncommanded delete of old message from INBOX
[imapx:A] I/O: 'A07191 UID MOVE 15552,15572,15575,15578,15588:15589,15598,15619:15620 Trash'
^ Delete recent messages from folder D
[imapx:A] I/O: 'A07212 UID MOVE 366689 INBOX'
^ Manually move what had been 558945 back to INBOX
[imapx:A] I/O: 'A08458 UID MOVE 616795 Trash'
^ Delete another recent message from INBOX
[imapx:B] I/O: 'B08501 UID MOVE 559030 Trash'
^ Uncommanded delete of another old message from INBOX
[imapx:A] I/O: 'A10213 UID MOVE 29610 Trash'
^ Delete recent message from folder C
[imapx:B] I/O: 'B10231 UID MOVE 29611 Trash'
^ Delete recent message from folder C
The UIDs in the 55xxxx range are (very) old messages in INBOX, and are higher than all other folders, which invalidated my original theory that smaller UIDs from other folders were being applied to INBOX. Maybe an index into an array of UIDs used by operations on the wrong folder?
I have no easy reproducer, nor do I know exactly what's triggering this -- my best guess is that this is happening during fairly rapid deletions among multiple folders, but so far it's only occurred maybe a dozen times over several weeks. The two instances shown above were maybe 20-30 minutes apart, with that log covering all of the moves/deletions over an hour or two.
This is with Evolution 3.48.4 on Fedora 38, with the default 3 connections and 3 second delay; unclear when it started or on what release, as I've mostly used Evolution with an EWS account and the IMAP account is a recent addition.