I#487 - IMAPx: Messages unexpectedly deleted from Inbox

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/487